--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,21 +7,17 @@ on:
     branches: [ master, main ]
 
 jobs:
-  test-and-build:
+  ci-cd:
     runs-on: ubuntu-latest
-    
-    strategy:
-      matrix:
-        python-version: [3.8, 3.9, '3.10', '3.11']
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
       
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.10'
         
     - name: Cache pip dependencies
       uses: actions/cache@v3
@@ -50,7 +46,7 @@ jobs:
       uses: actions/upload-artifact@v3
       if: always()
       with:
-        name: test-reports-python-${{ matrix.python-version }}
+        name: test-reports
         path: |
           target/reports/
           target/unittest-xml/
@@ -64,7 +60,7 @@ jobs:
       uses: actions/upload-artifact@v3
       if: always()
       with:
-        name: coverage-reports-python-${{ matrix.python-version }}
+        name: coverage-reports
         path: |
           target/reports/coverage/
           htmlcov/
@@ -72,7 +68,6 @@ jobs:
         
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
-      if: matrix.python-version == '3.10'
       with:
         file: ./target/reports/coverage.xml
         flags: unittests
@@ -83,41 +78,8 @@ jobs:
       run: |
         pyb publish
         
-    - name: Upload build artifacts
-      uses: actions/upload-artifact@v3
-      if: matrix.python-version == '3.10'
-      with:
-        name: build-artifacts
-        path: |
-          target/dist/
-          target/reports/
-        retention-days: 90
-        
-    - name: Archive production artifacts
-      uses: actions/upload-artifact@v3
-      if: matrix.python-version == '3.10' && github.ref == 'refs/heads/master'
-      with:
-        name: production-artifacts
-        path: |
-          target/dist/
-        retention-days: 365
-
-  security-scan:
-    runs-on: ubuntu-latest
-    needs: test-and-build
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-        
     - name: Install security tools
       run: |
-        python -m pip install --upgrade pip
         pip install bandit safety
         
     - name: Run Bandit security scan
@@ -137,25 +99,29 @@ jobs:
           bandit-report.json
           safety-report.json
         retention-days: 30
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: [test-and-build, security-scan]
-    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Download build artifacts
-      uses: actions/download-artifact@v3
+        
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: build-artifacts
+        path: |
+          target/dist/
+          target/reports/
+        retention-days: 90
+        
+    - name: Archive production artifacts
+      uses: actions/upload-artifact@v3
+      if: github.ref == 'refs/heads/master'
       with:
         name: production-artifacts
-        path: ./artifacts
+        path: |
+          target/dist/
+        retention-days: 365
         
     - name: Display artifact structure
+      if: github.ref == 'refs/heads/master'
       run: |
-        ls -la ./artifacts/
+        ls -la ./target/dist/
         
     # Add deployment steps here based on your deployment target
     # Examples:
