--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ master, main ]
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   ci-cd:
     runs-on: ubuntu-latest
@@ -125,3 +129,32 @@ jobs:
         name: production-artifacts
         path: target/dist/
         retention-days: 365
+
+    - name: Configure AWS credentials
+      if: github.ref == 'refs/heads/master'
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        role-to-assume: ${{ secrets.AWS_ROLE_ARN }}
+        aws-region: ${{ secrets.AWS_REGION }}
+        
+    - name: Login to Amazon ECR
+      if: github.ref == 'refs/heads/master'
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v2
+      
+    - name: Set up Docker Buildx
+      if: github.ref == 'refs/heads/master'
+      uses: docker/setup-buildx-action@v3
+      
+    - name: Build and push Docker image to ECR
+      if: github.ref == 'refs/heads/master'
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: |
+          ${{ steps.login-ecr.outputs.registry }}/product-management-app:latest
+          ${{ steps.login-ecr.outputs.registry }}/product-management-app:${{ github.sha }}
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+        platforms: linux/amd64
